fix: replace deprecated wrapper constructors and Locale API across shared module
Use Boolean.valueOf(), Integer.valueOf(), Double.valueOf(), Float.valueOf(), Character.valueOf() instead of deprecated constructors. Replace deprecated new Locale(String) with Locale.of(). Update @GenericGenerator from deprecated strategy='native' to type=SequenceStyleGenerator.class. Remove stale config files.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>