@@ -159,12 +159,12 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     	setExtraTypesExpectedForStudyLevelSql();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), studyId);
-        variables.put(new Integer(2), itemOid);
-        variables.put(new Integer(3), itemGroupOid);
-        variables.put(new Integer(4), studySubjectId);
-        variables.put(new Integer(5), Status.DELETED.getId());
-        variables.put(new Integer(6), Status.AUTO_DELETED.getId());
+        variables.put(Integer.valueOf(1), studyId);
+        variables.put(Integer.valueOf(2), itemOid);
+        variables.put(Integer.valueOf(3), itemGroupOid);
+        variables.put(Integer.valueOf(4), studySubjectId);
+        variables.put(Integer.valueOf(5), Status.DELETED.getId());
+        variables.put(Integer.valueOf(6), Status.AUTO_DELETED.getId());
 
         HashMap answer = new HashMap();
 
@@ -215,15 +215,15 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         idb.setActive(false);
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getEventCRFId()));
-        variables.put(new Integer(2), new Integer(idb.getItemId()));
-        variables.put(new Integer(3), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(4), idb.getValue());
-        variables.put(new Integer(5), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(6), new Integer(idb.getOrdinal()));
-        variables.put(new Integer(7), new Integer(idb.getOldStatus().getId()));
-        variables.put(new Integer(8), new Boolean(idb.isDeleted()));
-        variables.put(new Integer(9), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getEventCRFId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(idb.getItemId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(4), idb.getValue());
+        variables.put(Integer.valueOf(5), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(6), Integer.valueOf(idb.getOrdinal()));
+        variables.put(Integer.valueOf(7), Integer.valueOf(idb.getOldStatus().getId()));
+        variables.put(Integer.valueOf(8), Boolean.valueOf(idb.isDeleted()));
+        variables.put(Integer.valueOf(9), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("update"), variables);
 
         if (isQuerySuccessful()) {
@@ -253,10 +253,10 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         idb.setActive(false);
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(2), idb.getValue());
-        variables.put(new Integer(3), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(4), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(2), idb.getValue());
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(4), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("updateValue"), variables);
 
         if (isQuerySuccessful()) {
@@ -280,10 +280,10 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         idb.setActive(false);
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(2), idb.getValue());
-        variables.put(new Integer(3), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(4), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(2), idb.getValue());
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(4), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("updateValueForRemoved"), variables);
 
         if (isQuerySuccessful()) {
@@ -300,8 +300,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         ItemDataBean idb = (ItemDataBean) eb;
         idb.setActive(false);
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(2), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("updateStatus"), variables);
 
         if (isQuerySuccessful()) {
@@ -338,10 +338,10 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         idb.setActive(false);
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(2), idb.getValue());
-        variables.put(new Integer(3), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(4), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(2), idb.getValue());
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(4), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("updateValue"), variables);
 
         if (isQuerySuccessful()) {
@@ -357,8 +357,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         idb.setActive(false);
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(2), new Integer(idb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(idb.getId()));
         this.execute(digester.getQuery("updateUser"), variables);
 
         if (isQuerySuccessful()) {
@@ -381,15 +381,15 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
         int id = getNextPK();
-        variables.put(new Integer(1), new Integer(id));
-        variables.put(new Integer(2), new Integer(idb.getEventCRFId()));
-        variables.put(new Integer(3), new Integer(idb.getItemId()));
-        variables.put(new Integer(4), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(5), idb.getValue());
-        variables.put(new Integer(6), new Integer(idb.getOwnerId()));
-        variables.put(new Integer(7), new Integer(idb.getOrdinal()));
-        variables.put(new Integer(8), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(9), new Boolean(idb.isDeleted()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(id));
+        variables.put(Integer.valueOf(2), Integer.valueOf(idb.getEventCRFId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getItemId()));
+        variables.put(Integer.valueOf(4), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(5), idb.getValue());
+        variables.put(Integer.valueOf(6), Integer.valueOf(idb.getOwnerId()));
+        variables.put(Integer.valueOf(7), Integer.valueOf(idb.getOrdinal()));
+        variables.put(Integer.valueOf(8), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(9), Boolean.valueOf(idb.isDeleted()));
         this.execute(digester.getQuery("create"), variables);
 
         if (isQuerySuccessful()) {
@@ -412,15 +412,15 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
         int id = getNextPK();
-        variables.put(new Integer(1), new Integer(id));
-        variables.put(new Integer(2), new Integer(idb.getEventCRFId()));
-        variables.put(new Integer(3), new Integer(idb.getItemId()));
-        variables.put(new Integer(4), new Integer(idb.getStatus().getId()));
-        variables.put(new Integer(5), idb.getValue());
-        variables.put(new Integer(6), new Integer(idb.getOwnerId()));
-        variables.put(new Integer(7), new Integer(idb.getOrdinal()));
-        variables.put(new Integer(8), new Integer(idb.getUpdaterId()));
-        variables.put(new Integer(9), new Boolean(idb.isDeleted()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(id));
+        variables.put(Integer.valueOf(2), Integer.valueOf(idb.getEventCRFId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(idb.getItemId()));
+        variables.put(Integer.valueOf(4), Integer.valueOf(idb.getStatus().getId()));
+        variables.put(Integer.valueOf(5), idb.getValue());
+        variables.put(Integer.valueOf(6), Integer.valueOf(idb.getOwnerId()));
+        variables.put(Integer.valueOf(7), Integer.valueOf(idb.getOrdinal()));
+        variables.put(Integer.valueOf(8), Integer.valueOf(idb.getUpdaterId()));
+        variables.put(Integer.valueOf(9), Boolean.valueOf(idb.isDeleted()));
         this.execute(digester.getQuery("upsert"), variables);
 
         if (isQuerySuccessful()) {
@@ -534,11 +534,11 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         setTypesExpected();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), studyEventId);
-        variables.put(new Integer(2), itemOid);
-        variables.put(new Integer(3), itemGroupOid);
-        variables.put(new Integer(4), Status.DELETED.getId());
-        variables.put(new Integer(5), Status.AUTO_DELETED.getId());
+        variables.put(Integer.valueOf(1), studyEventId);
+        variables.put(Integer.valueOf(2), itemOid);
+        variables.put(Integer.valueOf(3), itemGroupOid);
+        variables.put(Integer.valueOf(4), Status.DELETED.getId());
+        variables.put(Integer.valueOf(5), Status.AUTO_DELETED.getId());
 
         ArrayList<ItemDataBean> dataItems = this.executeFindAllQuery("findByStudyEventAndOIDs", variables);
         return dataItems;
@@ -550,11 +550,11 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         setExtraTypesExpected();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), studyId);
-        variables.put(new Integer(2), itemOid);
-        variables.put(new Integer(3), itemGroupOid);
-        variables.put(new Integer(4), Status.DELETED.getId());
-        variables.put(new Integer(5), Status.AUTO_DELETED.getId());
+        variables.put(Integer.valueOf(1), studyId);
+        variables.put(Integer.valueOf(2), itemOid);
+        variables.put(Integer.valueOf(3), itemGroupOid);
+        variables.put(Integer.valueOf(4), Status.DELETED.getId());
+        variables.put(Integer.valueOf(5), Status.AUTO_DELETED.getId());
 
         HashMap answer = new HashMap();
 
@@ -604,7 +604,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypesExpected();
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(ID));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ID));
 
         String sql = digester.getQuery("findByPK");
         ArrayList alist = this.select(sql, variables);
@@ -618,7 +618,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
     public void delete(int itemDataId) {
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(itemDataId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemDataId));
 
         this.execute(digester.getQuery("delete"), variables);
         return;
@@ -627,7 +627,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
     public void deleteDnMap(int itemDataId) {
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(itemDataId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemDataId));
 
         this.execute(digester.getQuery("deleteDn"), variables);
         return;
@@ -649,8 +649,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllBySectionIdAndEventCRFId(int sectionId, int eventCRFId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(sectionId));
-        variables.put(new Integer(2), new Integer(eventCRFId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(sectionId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRFId));
 
         return this.executeFindAllQuery("findAllBySectionIdAndEventCRFId", variables);
     }
@@ -658,7 +658,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findByCRFVersion(CRFVersionBean crfVersionBean) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(crfVersionBean.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(crfVersionBean.getId()));
 
         return this.executeFindAllQuery("findByCRFVersion", variables);
     }
@@ -668,8 +668,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllActiveBySectionIdAndEventCRFId(int sectionId, int eventCRFId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(sectionId));
-        variables.put(new Integer(2), new Integer(eventCRFId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(sectionId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRFId));
 
         return this.executeFindAllQuery("findAllActiveBySectionIdAndEventCRFId", variables);
     }
@@ -677,7 +677,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllByEventCRFId(int eventCRFId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCRFId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCRFId));
 
         return this.executeFindAllQuery("findAllByEventCRFId", variables);
     }
@@ -685,8 +685,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllByEventCRFIdAndItemId(int eventCRFId, int itemId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCRFId));
-        variables.put(new Integer(2), new Integer(itemId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(itemId));
 
         return this.executeFindAllQuery("findAllByEventCRFIdAndItemId", variables);
     }
@@ -694,8 +694,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllByEventCRFIdAndItemIdNoStatus(int eventCRFId, int itemId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCRFId));
-        variables.put(new Integer(2), new Integer(itemId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(itemId));
 
         return this.executeFindAllQuery("findAllByEventCRFIdAndItemIdNoStatus", variables);
     }
@@ -703,8 +703,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllBlankRequiredByEventCRFId(int eventCRFId, int crfVersionId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCRFId));
-        variables.put(new Integer(2), new Integer(crfVersionId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(crfVersionId));
 
         return this.executeFindAllQuery("findAllBlankRequiredByEventCRFId", variables);
     }
@@ -713,8 +713,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCrfBean.getId()));
-        variables.put(new Integer(2), itemName);
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCrfBean.getId()));
+        variables.put(Integer.valueOf(2), itemName);
 
         ArrayList<ItemDataBean> itemDataBeans = this.executeFindAllQuery("findAllByEventCRFIdAndItemName", variables);
         return !itemDataBeans.isEmpty() && itemDataBeans.size() == 1 ? itemDataBeans.get(0) : null;
@@ -722,8 +722,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
 
     public void updateStatusByEventCRF(EventCRFBean eventCRF, Status s) {
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(s.getId()));
-        variables.put(new Integer(2), new Integer(eventCRF.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(s.getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRF.getId()));
 
         String sql = digester.getQuery("updateStatusByEventCRF");
         execute(sql, variables);
@@ -736,8 +736,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         ItemDataBean answer = new ItemDataBean();
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(itemId));
-        variables.put(new Integer(2), new Integer(eventCRFId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRFId));
 
         EntityBean eb = this.executeFindByPKQuery("findByItemIdAndEventCRFId", variables);
 
@@ -754,9 +754,9 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         ItemDataBean answer = new ItemDataBean();
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(itemId));
-        variables.put(new Integer(2), new Integer(eventCRFId));
-        variables.put(new Integer(3), new Integer(ordinal));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(ordinal));
 
         EntityBean eb = this.executeFindByPKQuery("findByItemIdAndEventCRFIdAndOrdinal", variables);
 
@@ -772,9 +772,9 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         ItemDataBean answer = new ItemDataBean();
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(itemId));
-        variables.put(new Integer(2), new Integer(eventCRFId));
-        variables.put(new Integer(3), new Integer(ordinal));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(3), Integer.valueOf(ordinal));
 
         EntityBean eb = this.executeFindByPKQuery("findByItemIdAndEventCRFIdAndOrdinal", variables);
 
@@ -789,7 +789,7 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         setTypesExpected();
         int answer = 0;
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(ecb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ecb.getId()));
         String sql = digester.getQuery("findAllRequiredByEventCRFId");
         ArrayList rows = this.select(sql, variables);
 
@@ -814,9 +814,9 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypeExpected(1, TypeNames.INT);
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(ecb.getId()));
-        variables.put(new Integer(2), new Integer(sb.getId()));
-        variables.put(new Integer(3), new Integer(igb.getId()));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ecb.getId()));
+        variables.put(Integer.valueOf(2), Integer.valueOf(sb.getId()));
+        variables.put(Integer.valueOf(3), Integer.valueOf(igb.getId()));
 
         ArrayList alist = this.select(digester.getQuery("getMaxOrdinalForGroup"), variables);
         Iterator it = alist.iterator();
@@ -846,8 +846,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypeExpected(2, TypeNames.STRING);
 
         HashMap variables = new HashMap(1);
-        variables.put(new Integer(1), new Integer(event_crf_id));
-        variables.put(new Integer(2), item_group_oid);
+        variables.put(Integer.valueOf(1), Integer.valueOf(event_crf_id));
+        variables.put(Integer.valueOf(2), item_group_oid);
 
         ArrayList alist = this.select(digester.getQuery("getMaxOrdinalForGroupByGroupOID"), variables);
         Iterator it = alist.iterator();
@@ -869,8 +869,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypeExpected(1, TypeNames.INT);
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), itemId);
-        variables.put(new Integer(2), new Integer(ec.getId()));
+        variables.put(Integer.valueOf(1), itemId);
+        variables.put(Integer.valueOf(2), Integer.valueOf(ec.getId()));
 
         ArrayList alist = this.select(digester.getQuery("getMaxOrdinalForGroupByItemAndEventCrf"), variables);
         Iterator it = alist.iterator();
@@ -894,9 +894,9 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypeExpected(3, TypeNames.INT);
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(item_id));
-        variables.put(new Integer(2), new Integer(ordinal_for_repeating_group_field));
-        variables.put(new Integer(3), new Integer(event_crf_id));
+        variables.put(Integer.valueOf(1), Integer.valueOf(item_id));
+        variables.put(Integer.valueOf(2), Integer.valueOf(ordinal_for_repeating_group_field));
+        variables.put(Integer.valueOf(3), Integer.valueOf(event_crf_id));
 
         ArrayList alist = this.select(digester.getQuery("isItemExists"), variables);
         Iterator it = alist.iterator();
@@ -912,8 +912,8 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
         this.setTypeExpected(1, TypeNames.INT);
 
         HashMap<Integer, Integer> variables = new HashMap<Integer, Integer>();
-        variables.put(new Integer(1), new Integer(itemId));
-        variables.put(new Integer(2), new Integer(eventcrfId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(itemId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(eventcrfId));
 
         ArrayList alist = this.select(digester.getQuery("getGroupSize"), variables);
         Iterator it = alist.iterator();
@@ -942,16 +942,16 @@ public class ItemDataDAO extends AuditableEntityDAO implements org.researchedc.d
     public ArrayList<ItemDataBean> findAllByEventCRFIdAndItemGroupId(int eventCRFId, int itemGroupId) {
         setTypesExpected();
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(eventCRFId));
-        variables.put(new Integer(2), new Integer(itemGroupId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(eventCRFId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(itemGroupId));
 
         return this.executeFindAllQuery("findAllByEventCRFIdAndItemGroupId", variables);
     }
 
 	public void undelete(int itemDataId, int updaterId) {
         HashMap<Integer, Comparable> variables = new HashMap<Integer, Comparable>();
-        variables.put(new Integer(1), new Integer(updaterId));
-        variables.put(new Integer(2), new Integer(itemDataId));
+        variables.put(Integer.valueOf(1), Integer.valueOf(updaterId));
+        variables.put(Integer.valueOf(2), Integer.valueOf(itemDataId));
 
         this.execute(digester.getQuery("undelete"), variables);
         return;
