@@ -12,7 +12,7 @@ import java.util.Locale;
  */
 // @author ywang
 public class I18nFormatUtil {
-    private final static Locale DEFAULT_LOCALE = new Locale("en");
+    private final static Locale DEFAULT_LOCALE = Locale.of("en");
     private final static String YEAR_FORMAT_STRING = "yyyy";
 
     private I18nFormatUtil() {}
