@@ -30,7 +30,7 @@ public class Sum extends AbstractFunction {
             } catch (Exception e) {
                 // errors.put(new Integer(errorCount++), e.getMessage() + " when
                 // evaluate " + "Sum(); ");
-                errors.put(new Integer(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Sum(); ");
+                errors.put(Integer.valueOf(errorCount++), "Unparseable number:" + " " + arg + " " + "in evaluation of" + " Sum(); ");
             }
         }
         if (errors.size() > 0) {
