@@ -54,7 +54,7 @@ public class JobTriggerService {
     }
 
     public void triggerJob(){
-        ResourceBundleProvider.updateLocale(new Locale("en_US"));
+        ResourceBundleProvider.updateLocale(Locale.of("en_US"));
         ArrayList<RuleSetBean> ruleSets = ruleSetDao.findAllRunOnSchedules(true);
         for (RuleSetBean ruleSet : ruleSets) {
             if (ruleSet.getStatus().AVAILABLE != null && ruleSet.isRunSchedule()) {
